--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ img{
 }
 
 h1{
-   color: #F5B5D2; 
+   color: #A8CD7A; 
    width: 375px;
    text-align: center;
    font-family: 'Patua One', serif;
@@ -85,7 +85,7 @@ h3{
     text-align: center;
     font-family: "salsa";
     font-size: 23px;
-    margin-top: 0;
+    margin-top: 0.5em;
 }
 
 p{
